# market-risk-forecasting-ai-dashboard

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements-all.txt  requirements-optional.txt  requirements.txt
app/: GUIDE_UTILISATION.md  README.md  README_API.md  README_BACKEND.md
app/backend/: __init__.py  main.py
app/backend/chatbot/: intent_router.py  response_guardrails.py  response_policy_router.py  service.py
app/backend/core/: config.py
app/backend/dashboard_state/: context_builder.py
app/backend/services/: backtest_service.py  forecast_service.py  report_service.py
app/dashboard/: README.md  index.html
app/data/archive/: Moroccan All Shares - Données Historiques (11)_20260425_204318.csv  Moroccan All Shares - Données Historiques (12)_20260428_192355.csv  Moroccan All Shares - Données Historiques (13)_20260503_002100.csv  (+1 more)
app/data/final/: master_dataset.csv
app/jobs/: compute_egarch_features.py  generate_report.py  hyperparameter_config.py  run_backtest_from_log.py  run_forecast_pipeline.py  run_full_masi_pipeline.py  run_hyperparameter_search.py  run_masi_update.py  run_return_hyperparameter_search.py  run_return_update_pipeline.py  run_validation_report_pipeline.py
app/ml/: __init__.py
app/pipelines/: README.md  __init__.py
app/tests/: README.md  test_chatbot_quality_v2.py  test_no_leakage.py  test_sequences.py
docs/: ARCHITECTURE.md  CHATBOT_ARCHITECTURE.md  CHATBOT_DIAGRAMS.md  CHATBOT_DIAGRAMS.tex  index.md
research/: README.md
research/notebooks/: README.md
tools/: README.md  test_local_llm.py
(+69 files in other folders)
