[project]
name = "masi-risk-engine"
version = "0.1.0"
description = "FastAPI dashboard and ML pipeline for MASI downside-risk forecasting."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["app"]
addopts = "-ra"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
